[package]
name = "image"
version = "0.1.2"
edition = "2021"

[dependencies]
image = { version = "0.25.6"}
actix-web = "4.11.0"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "gzip", "rustls-tls", "http2"] }
serde = { version = "1.0.219", features = ["derive"] }
bytes = "1.10.1"
url = "2.5.4"
http = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
tokio = { version="1.47.0", features = ["macros", "rt-multi-thread"] }
