[package]
name = "image"
version = "0.1.4"
edition = "2024"

[dependencies]
image = { version = "0.25.9" }
actix-web = { version = "4.12.1", features = [
    "compress-brotli",
    "compress-gzip",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "gzip",
    "rustls-tls",
    "http2",
] }
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.0"
url = "2.5.7"
http = "1.4.0"
env_logger = "0.11.8"
log = "0.4.29"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
